--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aaron Teshale — Python & Flask Developer</title>
-  <meta name="description" content="A personal portfolio showcasing my projects, skills, and experience in web development." />
+  <meta property="og:description" content="Clean, modern portfolio showcasing Python, Flask, automation, and backend development projects.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://aaron-pweb.github.io/">
+  <meta property="og:image" content="profile.jpg">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -385,7 +389,7 @@
           <img src="profile.jpg" draggable="false" alt="">
         </div>
         <div style="text-align:center;">
-          <h1 id="your-name">Aaron Teshale</h1>
+          <h1 id="Aaron Teshale">Aaron Teshale</h1>
           <h2 id="tagline">Python • Flask • Web & Automation</h2>
           <div class="meta">
             <span class="pill">Python</span>
