--- a/index.html
+++ b/index.html
@@ -449,6 +449,11 @@
         <div class="projects">
           <!-- 6 Projects -->
           <div class="proj">
+            <h3>Flask-CMS-Blog</h3>
+            <p>A Flask Content Managemnt system I made using Python in the 100days of python code challenge on the day 69 project.</p>
+            <a href="https://github.com/Aaron-pweb/Flask-CMS-Blog">View on GitHub &rarr;</a>
+          </div>
+          <div class="proj">
             <h3>Flask Web App</h3>
             <p>A simple personal card website built using Flask and styled with an HTML5 UP template.</p>
             <a href="https://github.com/Aaron-pweb/day-56">View on GitHub &rarr;</a>
