--- a/index.html
+++ b/index.html
@@ -479,9 +479,9 @@
             <a href="https://github.com/Aaron-pweb/day-31-FLASHY-APP">View on GitHub &rarr;</a>
           </div>
           <div class="proj">
-            <h3></h3>
-            <p>profile.</p>
-            <a href="https://github.com/Aaron-pweb">View on GitHub &rarr;</a>
+            <h3>Blog Post site</h3>
+            <p>Aaron's Blog Post</p>
+            <a href="https://flask-cms-1.onrender.com/">View Site &rarr;</a>
           </div>
         </div>
       </div>
